// PowerGym AG — database schema (DBML)
// Generated from supabase/migrations/ through 00000000000028_plan_create_valid_from.sql.
// Not auto-synced: update by hand whenever a migration adds/drops/renames a
// table or column (function-only migrations, RLS policies, and RPC
// signature changes don't require an update here).
// View at https://dbdiagram.io (paste this file) or any DBML-compatible tool.

Enum app_role {
  admin
  employee
}

Enum duration_type_enum {
  day
  week
  month
  year
}

Table profiles {
  id uuid [pk, note: 'FK to auth.users(id), no separate default']
  full_name text [not null]
  role app_role [not null, default: 'employee']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Auto-provisioned by handle_new_user() trigger on auth.users insert. Role comes from raw_app_meta_data only (server-set), never raw_user_meta_data.'
}

Table clients {
  id uuid [pk, default: `gen_random_uuid()`]
  dni_type text [ref: > document_types.code]
  dni_number text [unique, note: 'unique when present -- NULLs are distinct, so any number of clients may omit it']
  first_name text [not null, note: 'holds every first/middle name, space-separated -- one field per concept, not per name']
  last_name text [not null, note: 'holds every surname, space-separated']
  alias text [note: 'how staff refers to/looks up the client day-to-day; included in search']
  email text
  phone text
  alternative_phone text
  birth_date date
  gender text [ref: > gender_types.code]
  address text
  is_active boolean [not null, default: true]
  metadata jsonb [not null, default: `'{}'::jsonb`]
  created_by uuid [ref: > profiles.id]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (first_name, last_name) [name: 'clients_name_trgm_idx', type: gin]
    dni_number [name: 'clients_dni_trgm_idx', type: gin]
    created_at [name: 'clients_created_at_idx']
  }

  Note: 'No DELETE — soft delete via is_active. Only first_name/last_name required; everything else, including the document, is optional (a client can be registered with just a name and completed later).'
}

Table plans {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  slug text [unique]
  description text
  currency "char(3)" [not null, default: 'COP']
  duration_unit duration_type_enum [not null]
  duration_count integer [not null, note: 'check > 0']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'No price column — see plan_prices for the append-only price history. create_plan(name, price, ...) inserts both rows atomically.'
}

Table plan_prices {
  id uuid [pk, default: `gen_random_uuid()`]
  plan_id uuid [not null, ref: > plans.id]
  price "numeric(10,2)" [not null, note: 'check >= 0']
  valid_from date [not null, default: `current_date`]
  valid_until date [note: 'null = currently open-ended']
  created_by uuid [ref: > profiles.id]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    plan_id [name: 'plan_prices_plan_id_idx']
  }

  Note: 'Append-only price history. Inserting a new row auto-closes the previous open row for that plan (valid_until = new.valid_from - 1) via the plan_prices_close_previous trigger. plan_price_at(plan_id, date) resolves the price effective on a given date.'
}

Table subscriptions {
  id uuid [pk, default: `gen_random_uuid()`]
  client_id uuid [not null, ref: > clients.id]
  plan_id uuid [not null, ref: > plans.id]
  start_date date [not null]
  end_date date [not null, note: 'check end_date >= start_date']
  status text [not null, default: 'pending_payment', ref: > subscription_statuses.code]
  base_price "numeric(10,2)" [not null, note: 'snapshot of the plan price at creation']
  discount_amount "numeric(10,2)" [note: 'check 0 <= x <= base_price']
  final_price "numeric(10,2)" [not null, note: 'GENERATED ALWAYS AS round(base_price - coalesce(discount_amount,0), 2) STORED']
  cancellation_date date
  cancellation_reason text
  created_by uuid [ref: > profiles.id]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    client_id [unique, name: 'one_active_subscription_per_client', note: 'partial: where status = active']
    (status, end_date) [name: 'subscriptions_status_end_date_idx']
    client_id [name: 'subscriptions_client_idx']
  }

  Note: 'client_id: on delete cascade. plan_id: on delete restrict. Business invariant: at most one active subscription per client.'
}

// client_subscription_overview (view, migration 0033): one row per client
// LEFT JOINed to their highest-priority subscription (active >
// pending_payment > scheduled > expired > canceled, tied by start_date desc
// then created_at desc), with paid/remaining/days_remaining computed.
// sort_days_remaining (migration 0040) is days_remaining with negatives
// nulled out, so "closest to expiring" sorts don't rank overdue clients
// first.
// security_invoker -- respects clients/subscriptions/payments/plans RLS.

Table payments {
  id uuid [pk, default: `gen_random_uuid()`]
  subscription_id uuid [not null, ref: > subscriptions.id]
  amount "numeric(10,2)" [not null, note: 'check > 0']
  payment_method text [not null, ref: > payment_types.code]
  payment_date timestamptz [not null, default: `now()`]
  received_by uuid [ref: > profiles.id]
  notes text
  bank_account_id uuid [ref: > bank_accounts.id, note: 'optional; forbidden when payment_types.requires_bank_account is false for this row payment_method']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    subscription_id [name: 'payments_subscription_idx']
    payment_date [name: 'payments_date_idx']
    bank_account_id [name: 'payments_bank_account_id_idx', note: 'partial: where bank_account_id is not null']
  }

  Note: 'Append-only — no UPDATE/DELETE grants. subscription_id: on delete cascade. enforce_payment_bank_account trigger keeps bank_account_id consistent with the payment_type.'
}

// --- Catalog tables (replace what used to be fixed Postgres enums, so new
// values -- e.g. a payment method -- don't require a schema migration) ---

Table document_types {
  code text [pk]
  name text [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table gender_types {
  code text [pk]
  name text [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table subscription_statuses {
  code text [pk]
  name text [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table payment_types {
  code text [pk]
  name text [not null]
  description text
  requires_bank_account boolean [not null, default: true, note: 'permits bank_account_id on payments of this method (optional, not mandatory) -- see migration 0034']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table banks {
  code text [pk]
  name text [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table bank_account_types {
  code text [pk]
  name text [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table bank_accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  bank_code text [not null, ref: > banks.code]
  account_type_code text [not null, ref: > bank_account_types.code]
  account_number text [not null]
  account_holder_name text [not null]
  transfer_key text [note: 'Bancolombia "llave" (@alias)']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (bank_code, account_number) [unique]
  }

  Note: 'Operational data (like clients), not seeded in migrations — added per-environment.'
}
